# drowcoder

./: .gitignore  LICENSE  README.md  README.zh-tw.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: issue-title-check.yml  pr-title-check.yml
docs/: usage.md
examples/: basic_usage.py
src/: agent.py
src/drowcoder/: __init__.py  agent.py  checkpoint.py  cli.py  config.py  debug.py  develop.py  main.py  model.py  verbose.py
src/drowcoder/docs/: agent.md  agent.zh-tw.md  checkpoint.md  checkpoint.zh-tw.md  config.md  config.zh-tw.md  main.md  main.zh-tw.md  model.md  model.zh-tw.md  verbose.md  verbose.zh-tw.md
src/drowcoder/mcps/: base.py  streamable_http.py
src/drowcoder/prompts/: __init__.py  rules.py  system.py
src/drowcoder/prompts/instructions/: __init__.py  coder.py
src/drowcoder/tests/: __init__.py  base.py  conftest.py  test_agent_tool_call_pruning.py
src/drowcoder/tools/: README.md  __init__.py  attempt-completion.md  attempt_completion.py  attempt_completion.yaml  base.py  base.zh-tw.md  dispatcher.py  execute.md  execute.py  execute.yaml  execute.zh-tw.md  load.md  load.py  runtime.py  search-and-replace.md  search.md  search.py  search.yaml  search_and_replace.py  todo.py  todo.yaml  todo.zh-tw.md  write.md  write.py  write.yaml  write.zh-tw.md
src/drowcoder/tools/docs/: ATTEMPT_COMPLETION.md
src/drowcoder/tools/mcps/: README.md  base.py  dispatcher.py  stdio.py  streamable_http.py  utils.py
src/drowcoder/tools/tests/: README.md  __init__.py  base.py  conftest.py  test_attempt_completion.py  test_bash.py  test_execute.py  test_load.py  test_search.py  test_search_and_replace.py  test_todo.py  test_write.py
src/drowcoder/tools/tools/: attempt-completion.zh-tw.md  attempt_completion.yaml  base.md  base.py  bash.md  bash.py  bash.yaml  bash.zh-tw.md  dispatcher.py  factory.py  load.py  load.yaml  load.zh-tw.md  search-and-replace.zh-tw.md  search.py  search.zh-tw.md  search_and_replace.yaml  todo.md  todo.py  todo.yaml  write.py
src/drowcoder/tools/tools/tests/: README.md  test_attempt_completion.py  test_bash.py  test_load.py  test_search.py  test_search_and_replace.py  test_todo.py  test_write.py
src/drowcoder/tools/tools/utils/: flat_paths.py  ignore.py
src/drowcoder/tools/utils/: ext.py  ignore.py
src/drowcoder/utils/: logger.py
